<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.administrator.fulijishanqi.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="38dp"
            android:layout_marginTop="40dp"
            android:text="@string/benjin"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView"
            android:layout_alignTop="@+id/textView"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@+id/textView"
            android:ems="10"
            android:inputType="number"
            android:background="#ffffffff" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rmb"
            android:layout_toEndOf="@+id/editText"
            android:layout_marginStart="23dp"
            android:layout_alignTop="@+id/editText" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/editText"
            android:layout_marginStart="10dp"
            android:layout_marginTop="22dp"
            android:layout_toEndOf="@+id/textView"
            android:text="@string/fuli" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shangshubenjin"
            android:layout_marginEnd="25dp"
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignEnd="@+id/textView2" />

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_alignBaseline="@+id/textView3"
            android:layout_alignBottom="@+id/textView3"
            android:layout_alignStart="@+id/textView" />

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_toStartOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/checkBox2"
            android:layout_below="@+id/checkBox2"
            android:layout_marginTop="13dp"
            android:text="@string/lilv" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_alignStart="@+id/editText3"
            android:layout_above="@+id/textView7"
            android:layout_alignTop="@+id/textView5"
            android:background="#ffffffff"
            android:text="0" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/baifenhao"
            android:layout_alignTop="@+id/editText2"
            android:layout_toEndOf="@+id/editText2"
            android:layout_marginStart="11dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView5"
            android:layout_below="@+id/textView5"
            android:layout_marginTop="12dp"
            android:text="@string/qishu" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            android:layout_alignStart="@+id/editText4"
            android:layout_alignTop="@+id/textView7"
            android:layout_above="@+id/textView8"
            android:background="#ffffffff" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView7"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="14dp"
            android:text="@string/tixianfeilv" />

        <EditText
            android:id="@+id/editText4"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            android:layout_alignTop="@+id/textView8"
            android:layout_toEndOf="@+id/textView3"
            android:layout_alignBottom="@+id/textView8"
            android:background="#ffffffff" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editText4"
            android:text="@string/baifenhao"
            android:layout_alignStart="@+id/textView6" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView8"
            android:layout_centerVertical="true"
            android:text="@string/huoli" />

        <EditText
            android:id="@+id/editText5"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0"
            android:layout_alignStart="@+id/editText"
            android:layout_alignBottom="@+id/textView10"
            android:layout_alignTop="@+id/textView10"
            android:background="#ffffffff"
            android:gravity="center_vertical|right" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText5"
            android:layout_alignStart="@+id/textView2"
            android:text="@string/rmb" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView10"
            android:layout_below="@+id/textView10"
            android:layout_marginTop="11dp"
            android:text="@string/benlihe" />

        <EditText
            android:id="@+id/editText6"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView13"
            android:layout_alignStart="@+id/editText5"
            android:layout_alignTop="@+id/textView13"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0"
            android:background="#ffffffff"
            android:gravity="center_vertical|right"/>

        <TextView
            android:id="@+id/textView14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView11"
            android:layout_alignTop="@+id/editText6"
            android:text="@string/rmb" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView13"
            android:layout_below="@+id/textView13"
            android:layout_marginTop="15dp"
            android:text="@string/tixianfeiyong" />

        <EditText
            android:id="@+id/editText7"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView15"
            android:layout_alignStart="@+id/editText4"
            android:layout_alignTop="@+id/textView15"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0"
            android:layout_alignEnd="@+id/editText6"
            android:background="#ffffffff"
            android:gravity="center_vertical|right" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText7"
            android:layout_alignStart="@+id/textView14"
            android:text="@string/rmb" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView15"
            android:layout_below="@+id/textView15"
            android:layout_marginTop="11dp"
            android:text="@string/ketixianjin" />

        <EditText
            android:id="@+id/editText8"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="0"
            android:layout_alignTop="@+id/textView17"
            android:layout_alignStart="@+id/editText7"
            android:layout_alignEnd="@+id/editText7"
            android:layout_alignBottom="@+id/textView17"
            android:background="#ffffffff"
            android:gravity="center_vertical|right" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/editText8"
            android:layout_alignStart="@+id/textView16"
            android:text="@string/rmb" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView17"
            android:layout_below="@+id/textView17"
            android:layout_marginTop="22dp"
            android:text="@string/jisuan" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button"
            android:layout_toEndOf="@+id/checkBox3"
            android:text="@string/chongzhi" />

        <Button
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textView18"
            android:layout_alignTop="@+id/button2"
            android:text="@string/ptjisuanqi" />

        <Spinner
            android:id="@+id/spinner3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/lilvshijian"
            android:layout_alignTop="@+id/textView6"
            android:layout_toEndOf="@+id/textView6"
            android:layout_marginStart="11dp"
            android:background="#ffffffff" />

        <Spinner
            android:id="@+id/spinner4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/editText3"
            android:layout_alignStart="@+id/spinner3"
            android:entries="@array/lilvqishu"
            android:background="#ffffffff" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
